top 10 by sentences - unsure if correct

--- a/notebooks/amazonProductReviewAnalysis_nagib.ipynb
+++ b/notebooks/amazonProductReviewAnalysis_nagib.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "<module 'customHelpers' from '/Users/nagibshah/dev/COMP5349_AmazonProductReviewAnalysis/notebooks/customHelpers.py'>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,22 +630,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 97,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+----------+--------------------+--------------------+-----------+\n",
+      "|customer_id|product_id|       product_title|         review_body|count_sents|\n",
+      "+-----------+----------+--------------------+--------------------+-----------+\n",
+      "|   41838529|B00FP45RV8| C.P.E. Bach Edition|Some Heavenly Mus...|       1526|\n",
+      "|   36907003|B00CJCHJ8S|The RCA Albums Co...|Wow! 17CDs contai...|        445|\n",
+      "|   25398059|B001CMRQRA|The Classic Colum...|This is the kind ...|        398|\n",
+      "|   49745257|B00NEX8GNI|      111 Piano Hits|This is a very fi...|        241|\n",
+      "|   49754397|B00WWUD62U|      Jurassic World|Okay, brew a pot ...|        239|\n",
+      "|   16317291|B004I11TFM|Train Songs: 200 ...|CD  1<br />  1.  ...|        222|\n",
+      "|   50989966|B00HGFILU8|Adams: The Gospel...|The libretto is a...|        202|\n",
+      "|   50595705|B00000411B|Mozart: Ascanio i...|Initially this ma...|        196|\n",
+      "|   30678701|B000000LZS|          Zen Arcade|&#34;Something I ...|        196|\n",
+      "|   50345651|B00JM0KWUW|     Nashville Sound|The advent of roc...|        191|\n",
+      "+-----------+----------+--------------------+--------------------+-----------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# top 10 users ranked by median number of sentences in the reviews they have published\n",
-    "\n"
+    "# typo - perhaps its rank by number of sents? \n",
+    "dfTop10UsersBySents = helper.getTopBySentNumber(dfRecords=dfFilteredReviews, topnCol=\"customer_id\", \\\n",
+    "                                                textCol=\"review_body\",n=10)\n",
+    "\n",
+    "dfTop10UsersBySents.select(\"customer_id\",\"product_id\",\"product_title\",\"review_body\",\"count_sents\").show(10)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+----------+--------------------+--------------------+-----------+\n",
+      "|customer_id|product_id|       product_title|         review_body|count_sents|\n",
+      "+-----------+----------+--------------------+--------------------+-----------+\n",
+      "|   41838529|B00FP45RV8| C.P.E. Bach Edition|Some Heavenly Mus...|       1526|\n",
+      "|   36907003|B00CJCHJ8S|The RCA Albums Co...|Wow! 17CDs contai...|        445|\n",
+      "|   25398059|B001CMRQRA|The Classic Colum...|This is the kind ...|        398|\n",
+      "|   36907003|B007EG9CPM|The Complete Albu...|In 2015 Paul Simo...|        291|\n",
+      "|   36907003|B00HGTNKAU|Soul & Swagger: T...|I believe the app...|        254|\n",
+      "|   36907003|B008U3NU38|        Sound System|I'll openly admit...|        247|\n",
+      "|   49745257|B00NEX8GNI|      111 Piano Hits|This is a very fi...|        241|\n",
+      "|   49754397|B00WWUD62U|      Jurassic World|Okay, brew a pot ...|        239|\n",
+      "|   16317291|B004I11TFM|Train Songs: 200 ...|CD  1<br />  1.  ...|        222|\n",
+      "|   36907003|B005LTDPJI|The Classic Album...|Cheaper than a Wa...|        216|\n",
+      "+-----------+----------+--------------------+--------------------+-----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# top 10 products ranked by median number of sentences in the reviews they have received\n",
+    "\n",
+    "dfTop10ProductsBySents = helper.getTopBySentNumber(dfRecords=dfFilteredReviews, topnCol=\"product_id\", \\\n",
+    "                                                textCol=\"review_body\",n=10)\n",
+    "\n",
+    "dfTop10ProductsBySents.select(\"customer_id\",\"product_id\",\"product_title\",\"review_body\",\"count_sents\").show(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# top 10 products ranked by median number of sentences in the reviews they have received"
-   ]
+   "source": []
   }
  ],
  "metadata": {
