neg/pos segment

--- a/notebooks/amazonProductReviewAnalysis_nagib.ipynb
+++ b/notebooks/amazonProductReviewAnalysis_nagib.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "<module 'customHelpers' from '/Users/nagibshah/dev/COMP5349_AmazonProductReviewAnalysis/notebooks/customHelpers.py'>"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,6 +700,167 @@
     "                                                textCol=\"review_body\",n=10)\n",
     "\n",
     "dfTop10ProductsBySents.select(\"customer_id\",\"product_id\",\"product_title\",\"review_body\",\"count_sents\").show(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save the cleaned and filtered dataframe to file system \n",
+    "\n",
+    "#dfFilteredReviews.coalesce(1).write.format(\"parquet\") \\\n",
+    "#    .option(\"header\", \"true\").saveAsTable('filteredReviews',mode=\"overwrite\")\n",
+    "dfFilteredReviews.coalesce(1).write.csv(\"../output\",mode=\"overwrite\",header=True,sep=\"\\t\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Stage 3 Similarity analysis with Sentence Embedding\n",
+    "\n",
+    "perform similarity analysis on the review sentences. The analysis involves segmenting review body into multiple sentences; encoding each sentence as vector so that the distance between pair of sentences can be computed.\n",
+    "\n",
+    "### Positive vs. Negative Reviews\n",
+    "\n",
+    "* pick a product from the top 10 products in stage 1\n",
+    "* Create a positive and negative class of reviews using the rating \n",
+    "    - Positive Class - rate >=4 \n",
+    "    - Negative Class - rate <= 2\n",
+    "    - for each review, extracting the review body part and segment it into multiple sentences.\n",
+    "    - encode the sentences using google universal encoder\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load the base/filtered dataset created earlier \n",
+    "filtered_data = \"../output/part-*.csv\"\n",
+    "dfBaseDataset = spark.read.csv(filtered_data,header=True,sep=\"\\t\",schema=aws_product_review_schema_limited)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# product from top 10 by review number \n",
+    "base_product_id = \"B00MIA0KGY\"\n",
+    "\n",
+    "dfPositiveClass = dfBaseDataset.where((col(\"product_id\") == base_product_id) & (col(\"star_rating\") >= 4))\n",
+    "dfNegativeClass = dfBaseDataset.where((col(\"product_id\") == base_product_id) & (col(\"star_rating\") <= 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of positives: 110098\n",
+      "number of positives: 214\n",
+      "number of negatives: 16\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"number of positives: {0}\".format(dfBaseDataset.count()))\n",
+    "print(\"number of positives: {0}\".format(dfPositiveClass.count()))\n",
+    "print(\"number of negatives: {0}\".format(dfNegativeClass.count()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "# for each review, extract the review body part and segment it into multiple sentences\n",
+    "# extract the positive sentences\n",
+    "dfPosSents = dfPositiveClass.select(\"review_id\",\"review_body\") \\\n",
+    "    .withColumn(\"sentences\", helper.GenerateSentences(\"review_body\")) \\\n",
+    "    .select(\"review_id\", F.explode_outer(\"sentences\"))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extract the sentences - similar to flatMap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# extract the negative sentences\n",
+    "dfNegSents = dfNegativeClass.select(\"review_id\",\"review_body\") \\\n",
+    "    .withColumn(\"sentences\", helper.GenerateSentences(\"review_body\")) \\\n",
+    "    .select(\"review_id\", F.explode_outer(\"sentences\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Positive sententences extracted: 1324\n",
+      "Negative sententences extracted: 139\n",
+      "+--------------+--------------------+\n",
+      "|     review_id|                 col|\n",
+      "+--------------+--------------------+\n",
+      "|R338L3ESXHT0XJ|                Wow!|\n",
+      "|R338L3ESXHT0XJ|The absolutely pe...|\n",
+      "|R338L3ESXHT0XJ|She has never sou...|\n",
+      "|R338L3ESXHT0XJ|I would not be su...|\n",
+      "|R338L3ESXHT0XJ|Impossible to pic...|\n",
+      "+--------------+--------------------+\n",
+      "only showing top 5 rows\n",
+      "\n",
+      "+--------------+--------------------+\n",
+      "|     review_id|                 col|\n",
+      "+--------------+--------------------+\n",
+      "|R2D3O3SJ7R34VV|         Dullsville.|\n",
+      "|R2D3O3SJ7R34VV|All the wrong son...|\n",
+      "|R2D3O3SJ7R34VV|Streisand even  h...|\n",
+      "|R2D3O3SJ7R34VV|             BORING.|\n",
+      "|R2D3O3SJ7R34VV|        No artistry.|\n",
+      "+--------------+--------------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Positive sententences extracted: {0}\".format(dfPosSents.count()))\n",
+    "print(\"Negative sententences extracted: {0}\".format(dfNegSents.count()))\n",
+    "\n",
+    "dfPosSents.show(5)\n",
+    "dfNegSents.show(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Encoding the sentences - google universal encoder "
    ]
   },
   {
